kubernetes/coffee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "coffee-api.baileys.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-service
                port:
                  number: 8090
