kubernetes/coffee/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-service
spec:
  selector:
    app: coffee
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "caffeine-api.baileys.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee-service
                port:
                  number: 8090
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
        - name: coffee
          image: registry.baileys.dev/coffee:latest
          imagePullPolicy: Always
